[package]
name = "csbm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
html_parser = "0.6.3"
reqwest = {version = "0.11.16", features = ["blocking"]}
serde = "1.0.159"
serde_json = "1.0.95"
